# haptic

./: .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: dockerize-on-release.yml  publish-on-release.yml  test-build-only.yml
apps/desktop/: components.json  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js
apps/desktop/src/: app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: folder.rs  mod.rs  search.rs
apps/desktop/src-tauri/src/mac/: mod.rs  window.rs
apps/desktop/src/lib/: constants.ts  shortcuts.ts  store.ts  types.ts  utils.ts
apps/desktop/src/lib/actions/: shortcut.ts
apps/desktop/src/lib/api/: collection.ts  folders.ts  notes.ts  settings.ts
apps/desktop/src/lib/components/: footer.svelte  header.svelte  sidebar.svelte
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/desktop/src/routes/daily/: +layout.svelte  (+4 more)
apps/homepage/: package.json
apps/homepage/src/: app.html  hooks.server.ts
apps/homepage/src/lib/: redirects.ts  store.ts
apps/homepage/src/routes/: +layout.svelte  +page.svelte
apps/web/: .eslintrc.cjs  Dockerfile  nginx.conf  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
apps/web/src/lib/: constants.ts  store.ts  types.ts  utils.ts
apps/web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
(+83 files in other folders)
